--- a/_posts/products/2015-03-03-product3.md
+++ b/_posts/products/2015-03-03-product3.md
@@ -1,7 +1,9 @@
 ---
+layout: post
 title: 小型商业贷款
 name: 小型商业贷款
 categories: products
+post_url: "20150303/lorem-ipsum-product3/"
 summary: Lorem ipsum dolor sit amet, consectetur adipisicing elit
 description: 'Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
@@ -10,3 +12,15 @@ consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
 cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
 proident, sunt in culpa qui officia deserunt mollit anim id est laborum.'
 ---
+
+
+<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+
+[运营资本贷款]({% post_url /products/2015-03-03-product1 %})
+
+<p>hello world</p>
