--- a/_posts/products/2015-03-03-product5.md
+++ b/_posts/products/2015-03-03-product5.md
@@ -1,4 +1,5 @@
 ---
+layout: post
 title: 农业贷款
 name: 农业贷款
 categories: products
@@ -10,6 +11,8 @@ consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
 cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
 proident, sunt in culpa qui officia deserunt mollit anim id est laborum.'
 ---
+
+<img src="{{ site.baseurl }}/images/team/3.0_Our_Team_1.png" />
 
 Syntax highlighting is a feature that displays source code, in different colors and fonts according to the category of terms. This feature facilitates writing in a structured language such as a programming language or a markup language as both structures and syntax errors are visually distinct. Highlighting does not affect the meaning of the text itself; it is intended only for human readers.[^1]
 
