--- a/_slider/2015-03-24-fayne.md
+++ b/_slider/2015-03-24-fayne.md
@@ -4,8 +4,8 @@ title: fayne
 transition: fade
 speed: "300"
 caption: this is a test additinoal slider
-image: /images/slider1.jpg
-thumb: /images/slider1.jpg
+image: images/slider1.jpg
+thumb: images/slider1.jpg
 sort: "6"
 ---
 
